--- a/index.html
+++ b/index.html
@@ -20,12 +20,74 @@
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-<div gridster>
-	<ul>
-		<li style="border:1px solid black;" gridster-item="item" ng-repeat="item in ctrl.standardItems"> <div google-chart chart="ctrl.chart" style= "{{ctrl.chart.cssStyle}}"> </div></li>
-	</ul>
-</div>
-   
+
+
+    <!--<md-card>
+                    <md-toolbar class="md-warn" style="border-radius: 3px 3px 0 0">
+                        <md-card-header>
+                            <md-card-header-text>
+                                <span class="md-title">User</span>
+                                <span class="md-subhead">subhead</span>
+                            </md-card-header-text>
+                        </md-card-header>
+                    </md-toolbar>
+                    <div google-chart chart="ctrl.chart" style="{{ctrl.chart.cssStyle}}"> </div>
+                </md-card>-->
+
+
+    <!--<img ng-src="assets/img/image.jpg" class="md-card-image" alt="">-->
+    <!--<div flex>
+                    <div google-chart chart="ctrl.chart"> </div>
+                    <div>-->
+
+    <md-content flex gridster="gridsterOptions">
+        <md-card style='height: 100%; width: 100%;' gridster-item="item" ng-repeat="item in ctrl.standardItems" flex>
+            <md-card-content>
+                <md-toolbar class="md-warn" style="border-radius: 3px 3px 0 0">
+                    <md-card-header>
+                        <!--<md-card-avatar>
+                                <img class="md-user-avatar" src="image-source">
+                            </md-card-avatar>-->
+                        <md-card-header-text>
+                            <span class="md-title">title</span>
+                            <span class="md-subhead">sub-title</span>
+                        </md-card-header-text>
+                    </md-card-header>
+                </md-toolbar>
+                <!-- <canvas id="doughnut" class="chart chart-doughnut" data="data"
+                      labels="labels"></canvas> -->
+                <div google-chart chart="ctrl.chart"> </div>
+                <canvas id="line" class="chart chart-line" chart-data="data" chart-labels="labels" chart-legend="true" chart-series="series"
+                    chart-click="onClick">
+                </canvas>
+            </md-card-content>
+        </md-card>
+    </md-content>
+
+
+    <!--<md-card-title>
+                        <md-card-title-text>
+                            <span class="md-headline">card-headline</span>
+                            <span class="md-subhead">card-subheadline</span>
+                        </md-card-title-text>
+                    </md-card-title>-->
+    <!--<md-card-actions layout="" layout-align="end center">
+                        <md-button>Action 1</md-button>
+                        <md-button>Action 2</md-button>
+                        <md-card-icon-actions>
+                            <md-button class="button-class" aria-label="label">
+                                content
+                            </md-button>
+                        </md-card-icon-actions>
+                    </md-card-actions>-->
+    <!--<md-card-content>
+                         <div google-chart chart="ctrl.chart" flex> </div>
+                    </md-card-content>-->
+    </md-card>
+
+
+
+
     <!--jqyery-->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
